5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1594_1803.log
== SUBMITION (2019-04-01 09:29:56) 
-- CODE:
conta = int(input())

milhar = var//1000
centena = (var%1000)//100
dezena = (var%100)//10
unidade = (var%1000)%10

r = (milhar * 5 + centena * 4 + dezena * 3 + unidade * 2)/11

print(r)
-- EXECUTION TIME:
0.15932
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1803/main.py", line 3, in <module>
    milhar = var//1000
NameError: name 'var' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:30:00) 
-- CODE:
conta = int(input())

milhar = var//1000
centena = (var%1000)//100
dezena = (var%100)//10
unidade = (var%1000)%10

r = (milhar * 5 + centena * 4 + dezena * 3 + unidade * 2)/11

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    milhar = var//1000
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:30:17) 
-- CODE:
var = int(input())

milhar = var//1000
centena = (var%1000)//100
dezena = (var%100)//10
unidade = (var%1000)%10

r = (milhar * 5 + centena * 4 + dezena * 3 + unidade * 2)/11

print(r)
-- EXECUTION TIME:
0.154559
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0.9090909090909091
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
4.545454545454546
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
1.2727272727272727
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:30:20) 
-- CODE:
var = int(input())

milhar = var//1000
centena = (var%1000)//100
dezena = (var%100)//10
unidade = (var%1000)%10

r = (milhar * 5 + centena * 4 + dezena * 3 + unidade * 2)/11

print(r)
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:31:41) 
-- CODE:
var = int(input())

milhar = var//1000
centena = (var%1000)//100
dezena = (var%100)//10
unidade = (var%1000)%10

r = ( (milhar * 5) + (centena * 4) + (dezena * 3) + (unidade * 2) )/11

print(r)
-- EXECUTION TIME:
0.133616
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0.9090909090909091
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
4.545454545454546
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
1.2727272727272727
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:31:44) 
-- CODE:
var = int(input())

milhar = var//1000
centena = (var%1000)//100
dezena = (var%100)//10
unidade = (var%1000)%10

r = ( (milhar * 5) + (centena * 4) + (dezena * 3) + (unidade * 2) )/11

print(r)
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:32:10) 
-- CODE:
var = int(input())

milhar = var//1000
centena = (var%1000)//100
dezena = (var%100)//10
unidade = (var%1000)%10

r = ( (milhar * 5) + (centena * 4) + (dezena * 3) + (unidade * 2) )/11

print(r)
-- OUTPUT:
0.9090909090909091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:35:08) 
-- CODE:
var = int(input())

milhar = var//1000
centena = (var%1000)//100
dezena = (var%100)//10
unidade = (var%1000)%10

r = ( (milhar * 5) + (centena * 4) + (dezena * 3) + (unidade * 2) )/11

print(r)
print(milhar)
print(centena)
-- OUTPUT:
0.9090909090909091
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:35:44) 
-- CODE:
var = int(input())

milhar = var//1000
centena = (var%1000)//100
dezena = (var%100)//10
unidade = (var%1000)%10

r = ( (milhar * 5) + (centena * 4) + (dezena * 3) + (unidade * 2) )/11

print(r)
print(dezena)
print(unidade)

-- OUTPUT:
0.9090909090909091
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:36:27) 
-- CODE:
var = int(input())

milhar = var//1000
centena = (var%1000)//100
dezena = (var%100)//10
unidade = (var%1000)%10

r = ( (milhar * 5) + (centena * 4) + (dezena * 3) + (unidade * 2) )%11

print(r)

-- EXECUTION TIME:
0.157054
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
